# Ai-TextBook

./: .env.example  BETTER_AUTH_INTEGRATION.md  CHAT_WIDGET_INTEGRATION.md  CLAUDE.md  CLAUDE_CODE_SUBAGENTS.md  DATABASE_INTEGRATION.md  DEPLOYMENT.md  GITHUB_PAGES_DEPLOYMENT.md  GITHUB_SETUP.md  PERSONALIZATION_FEATURES.md  README.md  TRANSLATION_FEATURES.md  docker-compose.yml  docusaurus.config.js  env.  node-safe.bat  package-lock.json  package.json  rag_chatbot_README.md  server.js  shell-safe.js  sidebars.js  tmp_chat_widget.jsx  tmp_db.py  tmp_main.py  vercel.json
.claude/: settings.local.json
agents/: README.md  call_summarizer.js  example.html  requirements.txt  test_agents.py
auth/: README.md  package-lock.json  package.json  personalization.js  server.ts  tsconfig.json
backend/: Dockerfile  requirements.txt
bot/: Dockerfile  README.md  chat_service.py  docker-compose.yml  fastapi_app.py  ingest.py  requirements.txt
docs/: assessments.md  authentication.md  capstone.md  chat-widget-example.md  chat-widget.md  demo.md  hardware.md  personalization-integration.md  resources.md  subagents.md  translation-example.md  translation-feature.md
migrations/: 001_initial_schema.sql
nodes/: README.md  package.xml  setup.py  simple_listener.py  simple_talker.py
nodes/launch/: simple_nodes_launch.py
rag-chatbot/: .env.example  Dockerfile  README.md  ingest.py  requirements.txt  run.py  test_app.py
scripts/: find-dom-refs.js
src/: Root.js  config.js
subagents/: gazebo-launcher-subagent.md  roscore-subagent.md  urdf-generator-subagent.md
(+187 files in other folders)
